// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`@modular-css/css-to-js API should create coverage infrastructure when options.dev.coverage is truthy: code 1`] = `
const a = "mc74f3fa7b_a";
if(!globalThis.mcssCoverage) {
    globalThis.mcssCoverage = Object.create(null);
}

globalThis.mcssCoverage["a.css"] = Object.create(null);
globalThis.mcssCoverage["a.css"]["a"] = 0;

const cssData = {
    a
};

export default new Proxy(cssData, {
    get(tgt, key) {
        if(key in tgt) {
            globalThis.mcssCoverage["a.css"][key]++;

            return tgt[key];
        }

        throw new ReferenceError(key + " is not exported by a.css");
    }
})

export {
    a
};
`;

exports[`@modular-css/css-to-js API should deconflict the variable name in dev: code 1`] = `
const data = "mc74f3fa7b_data";
const cssData = {
    data
};

export default new Proxy(cssData, {
    get(tgt, key) {
        if(key in tgt) {
            
            return tgt[key];
        }

        throw new ReferenceError(key + " is not exported by a.css");
    }
})

export {
    data
};
`;

exports[`@modular-css/css-to-js API should dedupe repeated identifiers: code 1`] = `
import { a } from "<ROOT-DIR>/a.css";
const a1 = a + " " + "mc71966a67_a";
export default {
    "a" : a1
};

export {
    a1 as a
};
`;

exports[`@modular-css/css-to-js API should generate a javscript proxy in dev: code 1`] = `
const a = "mc74f3fa7b_a";
const cssData = {
    a
};

export default new Proxy(cssData, {
    get(tgt, key) {
        if(key in tgt) {
            
            return tgt[key];
        }

        throw new ReferenceError(key + " is not exported by a.css");
    }
})

export {
    a
};
`;

exports[`@modular-css/css-to-js API should generate empty results & a warning on invalid file input: code 1`] = `export default null;`;

exports[`@modular-css/css-to-js API should generate empty results & a warning on invalid file input: warnings 1`] = `
[
  ./NOPE.css doesn't exist in the processor instance,
]
`;

exports[`@modular-css/css-to-js API should generate javascript from composes: code 1`] = `
const custom = "mca72bf2bd_custom";
const rule = custom + " " + "mca72bf2bd_rule";
export default {
    custom,
rule
};

export {
    custom,
rule
};
`;

exports[`@modular-css/css-to-js API should generate javascript from multiple composes: code 1`] = `
const rule = custom + " " + "mc9c938a76_rule";
const custom = "mc9c938a76_custom";
export default {
    rule,
custom
};

export {
    rule,
custom
};
`;

exports[`@modular-css/css-to-js API should generate javascript with var variable statements: code 1`] = `
var str = "\\"string\\"";
var $values = {
    str,
};
var fooga = "mce1ef44f3_fooga";
export default {
    $values,
fooga
};

export {
    $values,
fooga
};
`;

exports[`@modular-css/css-to-js API should generate javascript: code 1`] = `
const a = "mc74f3fa7b_a";
export default {
    a
};

export {
    a
};
`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: { rewriteInvalid: false }: code 1`] = `
const a1 = "mc74f3fa7b_a-1";
export default {
    "a-1" : a1
};
`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: { rewriteInvalid: false }: named exports 1`] = `[]`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: { rewriteInvalid: false }: warnings 1`] = `
[
  "a-1" is not a valid JS identifier,
]
`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: { rewriteInvalid: false, warn: false }: code 1`] = `
const a1 = "mc74f3fa7b_a-1";
export default {
    "a-1" : a1
};
`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: { rewriteInvalid: false, warn: false }: named exports 1`] = `[]`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: { rewriteInvalid: false, warn: false }: warnings 1`] = `[]`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: { warn: false }: code 1`] = `
const a1 = "mc74f3fa7b_a-1";
export default {
    "a-1" : a1
};

export {
    a1
};
`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: { warn: false }: named exports 1`] = `
[
  a1,
]
`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: { warn: false }: warnings 1`] = `[]`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: {}: code 1`] = `
const a1 = "mc74f3fa7b_a-1";
export default {
    "a-1" : a1
};

export {
    a1
};
`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: {}: named exports 1`] = `
[
  a1,
]
`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: {}: warnings 1`] = `
[
  "a-1" is not a valid JS identifier, exported as "a1",
]
`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: false: code 1`] = `
const a1 = "mc74f3fa7b_a-1";
export default {
    "a-1" : a1
};
`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: false: named exports 1`] = `[]`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: false: warnings 1`] = `[]`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: true: code 1`] = `
const a1 = "mc74f3fa7b_a-1";
export default {
    "a-1" : a1
};

export {
    a1
};
`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: true: named exports 1`] = `
[
  a1,
]
`;

exports[`@modular-css/css-to-js API should handle options.namedExports set to: true: warnings 1`] = `
[
  "a-1" is not a valid JS identifier, exported as "a1",
]
`;

exports[`@modular-css/css-to-js API should output css when requested: code 1`] = `
const a = "mc74f3fa7b_a";
export default {
    a
};

export {
    a
};
export const styles = ".mc74f3fa7b_a { color: red; }";
`;

exports[`@modular-css/css-to-js API should output warnings when options.dev.warn is truthy 1`] = `
Snapshot Diff:
- First value
+ Second value

@@ --- --- @@
          if(key in tgt) {
              
              return tgt[key];
          }

-         throw new ReferenceError(key + " is not exported by a.css");
+         console.warn(key, "is not exported by a.css")
      }
  })

  export {
      a
`;

exports[`@modular-css/css-to-js API should output without default export: code 1`] = `
const a = "mc74f3fa7b_a";

export {
    a
};
`;

exports[`@modular-css/css-to-js API should represent external @values aliased to local @values: code 1`] = `
import { $values as $aValues } from "<ROOT-DIR>/a.css";
const v = "#00F";
const $values = {
    "values" : $aValues,
v,
};
const b = "mc71966a67_b";
export default {
    $values,
b
};

export {
    $values,
b
};
`;

exports[`@modular-css/css-to-js API should represent external @values namespaces: code 1`] = `
import { $values as $aValues } from "<ROOT-DIR>/a.css";
const v = "#0F0";
const $values = {
    "values" : $aValues,
v,
};
const b = "mc71966a67_b";
export default {
    $values,
b
};

export {
    $values,
b
};
`;

exports[`@modular-css/css-to-js API should represent external @values: code 1`] = `
import { $values as $aValues } from "<ROOT-DIR>/a.css";
const $values = {
    "v" : $aValues["v"],
};
const b = "mc71966a67_b";
export default {
    $values,
b
};

export {
    $values,
b
};
`;

exports[`@modular-css/css-to-js API should represent external composition: code 1`] = `
import { a } from "<ROOT-DIR>/a.css";
const b = a + " " + "mc71966a67_b";
export default {
    b
};

export {
    b
};
`;

exports[`@modular-css/css-to-js API should represent global composition from external resources: code 1`] = `
const a = "foo" + " " + "mc74f3fa7b_a";
export default {
    a
};

export {
    a
};
`;

exports[`@modular-css/css-to-js API should represent local @values: code 1`] = `
const v = "#00F";
const $values = {
    v,
};
const a = "mc74f3fa7b_a";
export default {
    $values,
a
};

export {
    $values,
a
};
`;

exports[`@modular-css/css-to-js API should represent local composition: code 1`] = `
const a = "mc74f3fa7b_a";
const b = a + " " + "mc74f3fa7b_b";
export default {
    a,
b
};

export {
    a,
b
};
`;

exports[`@modular-css/css-to-js API should use relative imports when requested: code 1`] = `
import { a } from "./a.css";
const b = a + " " + "mc71966a67_b";
export default {
    b
};

export {
    b
};
`;
